fix(post): post content layout with wrap

--- a/src/app/main/post-card/post-card.component.scss
+++ b/src/app/main/post-card/post-card.component.scss
@@ -4,7 +4,7 @@ $cardInteractionsIcons: 20px;
 mat-card {
   height: 100%;
   & mat-card-content {
-    white-space: break-spaces;
+    white-space: pre-line;
   }
   & mat-card-footer {
     padding: 8px 0;
